--- a/src/app/pages/ecg-cases/ecg-cases.page.scss
+++ b/src/app/pages/ecg-cases/ecg-cases.page.scss
@@ -64,12 +64,6 @@ ion-header {
   margin-top: 2px;
 }
 
-.single-select-cls {
-  width: 100%;
-  height: 30px;
-  border-color: #e1e1e1;
-  font-size: 12px;
-}
 .logout-label-cls {
   float: right;
   padding-top: 3px;
@@ -880,4 +874,28 @@ body {font-family: Arial, Helvetica, sans-serif;}
   margin-right: 18px;
 }
 
+.select-item-cls {
+  height: 30px;
+    width: 94%;
+    margin-right: 18px;
+    border: 1px solid #dad2d2;
+}
+// .single-select-cls {
+//   width: 100%;
+//   height: 30px;
+//   border-color: #e1e1e1;
+//   font-size: 12px;
+// }
+.single-select-cls {
+  margin: 0px;
+  padding: 0px;
+  margin-bottom: 18px;
+  width: 100%;
+  height: 30px;
+  border-color: #e1e1e1;
+  font-size: 12px;
+}
+ion-item.item-interactive.ion-invalid {
+  --highlight-background: transparent !important;
+}
 
