Redmin issues fixes

--- a/src/app/pages/ecg-cases/ecg-cases.page.scss
+++ b/src/app/pages/ecg-cases/ecg-cases.page.scss
@@ -876,7 +876,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 .select-item-cls {
   height: 30px;
-    width: 94%;
+    width: 98%;
     margin-right: 18px;
     border: 1px solid #dad2d2;
 }
@@ -895,6 +895,12 @@ body {font-family: Arial, Helvetica, sans-serif;}
   border-color: #e1e1e1;
   font-size: 12px;
 }
+
+ion-item::part(native){
+  padding-inline-start: 11px !important;
+  padding-left: 11px !important;
+}
+
 ion-item.item-interactive.ion-invalid {
   --highlight-background: transparent !important;
 }
