case code requiered remove

--- a/src/app/pages/ecg-cases/ecg-cases.page.html
+++ b/src/app/pages/ecg-cases/ecg-cases.page.html
@@ -245,10 +245,10 @@
           <p class="label-text one-line-label-cls">{{'CaseCode' | translate}}</p>
           <input class="input-cls one-line-input-cls" placeholder="Enter case code" id="caseCode" formControlName="caseCode" name="caseCode" />
         </div>
-        <div style="text-align: center !important;" *ngIf="isSubmit && f.caseCode.errors" class="error-block">
+        <!-- <div style="text-align: center !important;" *ngIf="isSubmit && f.caseCode.errors" class="error-block">
           <small *ngIf=" f.caseCode.errors.required">{{ 'caseDetailsRequired' | translate
             }}</small>
-        </div>
+        </div> -->
 
         <!-- Skill Level  -->
         <div class="case-description one-line-cls">
