Reference link and supplement issue fixed

--- a/src/app/pages/ecg-cases/ecg-cases.page.html
+++ b/src/app/pages/ecg-cases/ecg-cases.page.html
@@ -123,15 +123,15 @@
       </div>
 
       <!-- Case Code -->
-      <div class="case-description dotted-border">
-        <p class="desc-heading">{{'CaseCode' | translate}}</p>
-        <p class="desc-details">{{selectedCase?.caseCode}}</p>
+      <div class="case-description one-line-desc  dotted-border">
+        <p class="desc-heading one-line-decs-heading">{{'CaseCode' | translate}}</p>
+        <p class="desc-details one-line-decs-details">{{selectedCase?.caseCode}}</p>
       </div>
 
       <!-- Skill Level  -->   
-      <div class="case-description dotted-border">
-        <p class="desc-heading">{{'skillLevel' | translate}}</p>
-        <p class="desc-details">{{selectedCase?.skillLevel}}</p>
+      <div class="case-description one-line-desc dotted-border">
+        <p class="desc-heading one-line-decs-heading">{{'skillLevel' | translate}}</p>
+        <p class="desc-details one-line-decs-details">{{selectedCase?.skillLevel}}</p>
       </div>
 
       <!-- Case details -->
