--- a/src/global.scss
+++ b/src/global.scss
@@ -627,15 +627,30 @@ p {
   }
 }
 .custom-modal-image-viewer {
-  --max-height:	 80% !important;
-  --max-width: 80% !important;
+  --max-height:	 90% !important;
+  --max-width: 90% !important;
   --min-height:	 10% !important;
   --min-width: 10% !important;
-  // --height: 50%  !important;
-  // --width: 50%  !important;
-  // --background: transparent;
-  // --box-shadow:none !important;
+  // --max-height:	 80% !important;
+  // --max-width: 80% !important;
+  // --min-height:	 10% !important;
+  // --min-width: 10% !important;
   display: none;
+  
+  ion-toolbar {
+    --background: transparent !important;
+    background: transparent !important;
+  }
+  ion-header{
+    z-index: initial;
+  }
+  ion-title {
+    font-size: 18px;
+    padding-bottom: 28px;
+    padding-left: 2px;
+    color: red;
+    font-weight: 600;
+  }
 
   ion-content {
     --background: transparent;
