--- a/src/app/pages/ecg-cases/ecg-cases.page.scss
+++ b/src/app/pages/ecg-cases/ecg-cases.page.scss
@@ -920,3 +920,7 @@ ion-item.item-interactive.ion-invalid {
   --highlight-background: transparent !important;
 }
 
+.select-text {
+  font-size: 12px;
+}
+
