--- a/src/app/pages/ecg-cases/ecg-cases.page.html
+++ b/src/app/pages/ecg-cases/ecg-cases.page.html
@@ -301,7 +301,7 @@
             </ion-img>
             <ion-button *ngIf="!attachment" id="attachEcgReport" (click)="attachImage()" class="attch-btn">{{'attachEcgReport' | translate}}
             </ion-button>
-            <ion-button *ngIf="attachment" id="attachEcgReport" (click)="attachImage()" class="attch-btn"> Remove ECG file
+            <ion-button *ngIf="attachment" id="attachEcgReport" (click)="attachImage()" class="attch-btn"> Remove ECG File
             </ion-button>
 
           </div>
