--- a/src/app/pages/ecg-cases/ecg-cases.page.scss
+++ b/src/app/pages/ecg-cases/ecg-cases.page.scss
@@ -908,7 +908,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
   width: 100%;
   height: 30px;
   border-color: #e1e1e1;
-  font-size: 12px;
+  font-size: 12px !important;
+  font-family: 'Roboto' !important;
+  font-weight: 400 !important;
 }
 
 ion-item::part(native){
