--- a/src/app/pages/ecg-cases/ecg-cases.page.html
+++ b/src/app/pages/ecg-cases/ecg-cases.page.html
@@ -428,6 +428,7 @@
               toolbar:'', height : '100%',
               link_default_protocol: 'https',
               default_link_target: '_blank',
+              convert_urls: false,
               menubar:false,
               statusbar: false,
               base_url: '/tinymce',
@@ -452,6 +453,7 @@
               toolbar:'', height : '100%',
               link_default_protocol: 'https',
               default_link_target: '_blank',
+              convert_urls: false,
               menubar:false,
               statusbar: false,
               base_url: '/tinymce',
